--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     ]
   },
   "dependencies": {
+    "@react-spring/three": "^9.0.0-rc.3",
+    "@use-it/event-listener": "^0.1.3",
     "dotenv": "^8.2.0",
     "drei": "0.0.60",
     "express": "^4.17.1",
