--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "gltf-webpack-loader": "^1.0.6",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.9",
     "mini-css-extract-plugin": "^0.9.0",
