added manual controls

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     ]
   },
   "dependencies": {
+    "@use-it/event-listener": "^0.1.3",
     "dotenv": "^8.2.0",
     "drei": "0.0.60",
     "express": "^4.17.1",
