--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "env NODE_ENV=production webpack & node server/server.js",
     "build": "env NODE_ENV=production webpack",
-    "dev": "env NODE_ENV=development webpack-dev-server --open"
+    "client": "env NODE_ENV=development webpack-dev-server --open",
+    "dev": "env NODE_ENV=development webpack & node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -59,9 +60,13 @@
   "dependencies": {
     "@react-spring/three": "^9.0.0-rc.3",
     "@use-it/event-listener": "^0.1.3",
+    "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "drei": "0.0.60",
     "express": "^4.17.1",
+    "mongoose": "^5.9.19",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-three-fiber": "^4.2.8",
