--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "env NODE_ENV=production webpack & node server/server.js",
     "build": "env NODE_ENV=production webpack",
     "client": "env NODE_ENV=development webpack-dev-server --open",
-    "dev": "env NODE_ENV=development webpack & node server/server.js"
+    "dev": "env NODE_ENV=development webpack-dev-server & node server/server.js"
   },
   "repository": {
     "type": "git",
